# megamaid

./: .gitignore  .gitleaks.toml  EXAMPLES.md  README.md  SKILL.md  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  release-tag.yml
mcp/: Dockerfile  README.md  server.py
patterns/: auth_wall.md  graphql_api.md  image_downloads.md  load_more_infinite.md  paginated_html.md  pdf_downloads.md  rest_json_api.md  rss_atom_feed.md  search_seed.md  shopify_json.md  sitemap_crawl.md  spa_hydration.md
references/: etiquette.md  recon.md  troubleshooting.md
templates/: README.md  pyproject.toml
templates/megamaid/: base.py  cli.py  discovery.py  image_index.py  images.py  manifest.py  models.py  recon.py
templates/targets/: example_target.py
