[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "megamaid-scraper"
version = "0.1.0"
description = "A megamaid-scaffolded web scraper."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.48",
    "beautifulsoup4>=4.12",
    "pydantic>=2.5",
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
megamaid = "megamaid.cli:cli"

[tool.setuptools.packages.find]
include = ["megamaid*", "targets*"]
